[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "image_lite"

[project]
name = "django_image_lite"
authors = [{name = "robert crowther", email = "rw.crowther@gmail.com"}]
readme = "README.md"

dynamic = ["version", "description"]
dependencies = [
    "pillow",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Framework :: Django"
]

[project.urls]
 Documentation = "https://github.com/rcrowther/django-image-lite"
